apps/react-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-react-app
  namespace: default
  labels:
    app: my-react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-react-app
  template:
    metadata:
      labels:
        app: my-react-app
    spec:
      containers:
        - name: react-app
          image: skoopy365/my-react-app:20250614-034504
          ports:
            - containerPort: 80
