apps/react-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-react-app-service
spec:
  selector:
    app: my-react-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
