apps/react-app/ingress-tls-terraform.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app
  annotations:
    cert-manager.io/cluster-issuer: "acme-issuer"
spec:
  ingressClassName: haproxy
  tls:
    - hosts:
        - react.run.place
      secretName: cert-falksolu 
  rules:
    - host: react.run.place
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-react-app-service
                port:
                  number: 80
